--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="files/login.js"></script>
     <title>Jogo da memória</title>
     <meta name="author" content="código feito por João A. M. Borges com vídeo do canal do youtube 'Manual do Dev'">
-    <meta name="description" content="">
+    <meta name="description" content="https://joaombdev.github.io/matching-game/">
 </head>
 <body>
     <form action="" class="login-form">
