--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="author" content="código feito por João A. M. Borges com vídeo do canal do youtube 'Manual do Dev'">
     <meta name="description" content="https://joaombdev.github.io/matching-game/">
 </head>
+<!--
+            _   
+       .__(.)< (MEOW)
+        \___)
+ ~~~~~~~~~~~~~~~~~~
+-->
 <body>
     <form action="" class="login-form">
         <section class="login-header">
