--- a/files/game.html
+++ b/files/game.html
@@ -12,13 +12,32 @@
     <meta name="description" content="">
 </head>
 
-<body>
+<!-- Faltou info adicionais no footer -->
+<body id="body-game">
     <main>
         <header>
-            <h1 class="player">Lorem ipsum</h1>
-            <h1>Tempo: <span class="timer">00</span></h1>
+            <h1 class="player"></h1>
+            <aside class="info">
+                <h1>Tempo: <span class="timer">0</span></h1>
+                <h1>Pontos: <span class="score">0</span></h1>
+                <h1>Clicks: <span class="clicks">0</span></h1>
+                <h1><span class="trys"></span></h1>
+
+                <section class="class"></section>
+            </aside>
         </header>
+
         <section class="container"></section>
+
+        <!-- <footer>
+            <a href="" target="_blank" rel="noopener noreferrer"><img src="" alt=""></a>
+            <section class="footer-social-media">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores suscipit architecto, perspiciatis fuga deleniti fugiat velit in dolorem impedit natus delectus? Minus deleniti quo ea eveniet vero aperiam voluptatum aliquid!</p>
+                <a href="" target="_blank" rel="noopener noreferrer"><img src="" alt=""></a>
+                <a href="" target="_blank" rel="noopener noreferrer"><img src="" alt=""></a>
+                <a href="" target="_blank" rel="noopener noreferrer"><img src="" alt=""></a>
+            </section>
+        </footer> -->
     </main>
 </body>
 
