--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="login.js"></script>
+    <link rel="stylesheet" href="files/style.css">
+    <script defer src="files/login.js"></script>
     <title>Jogo da memória</title>
     <meta name="author" content="código feito por João A. M. Borges com vídeo do canal do youtube 'Manual do Dev'">
     <meta name="description" content="">
