--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <form action="" class="login-form">
         <section class="login-header">
-            <img src="/images/lamp.jpg" alt="imagem de lâmpada">
+            <img src="images/lamp.jpg" alt="imagem de lâmpada">
             <h1 class="login-title">Jogo da memória</h1>
         </section>
         <section class="buttons">
